# iitm-llm-app-developer

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  common_utils.py  database_utils.py  external_api.py  github_utils.py  main.py  models.py  openai_llm_utils.py  task_handler.py  xml_utils.py
tests/: test_github_utils.py  test_task_handler.py
