[project]
name = "iitm-llm-app-developer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic[email]>=2.12.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "hypothesis>=6.140.3",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
